--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
 		"react-dom": "^16.9.0",
 		"react-scripts": "^3.1.2",
 		"typescript": "3.5.3",
-		"@fed-exam/config": "^1.0.0"
+		"@fed-exam/config": "^1.0.0",
+		"react-truncate": "^2.4.0"
 	},
 	"scripts": {
 		"start": "set CI=true && react-scripts start",
