--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
 		"lerna": "^3.13.1"
 	},
 	"dependencies": {
+		"@types/elasticsearch": "^5.0.37",
 		"bootstrap": "^4.6.0",
+		"config": "^3.3.4",
 		"elasticsearch": "^16.7.2",
+		"i": "^0.3.6",
+		"mongoose": "^5.11.15",
+		"npm": "^7.6.1",
 		"react-dropdown": "^1.9.2",
 		"react-dropdown-select": "^4.7.4",
 		"react-select": "^4.1.0",
